tests/fixtures/invalid/int_bitor_none.py
# Cannot bitwise OR Int and None
x: int = 1 | None
